--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,11 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #f0ead6;
+  text-align: center;
+  color: #36558f;
+}
+/*# sourceMappingURL=main.css.map */
