--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,14 +1,16 @@
 $colors: (
-  primary: #36558f,
-  primary-variant: #96acb7,
-  secondary: #48233c,
-  secondary-variant: #40376e,
+  primary: #ff0000,
+  primary-light: lighten(#ff0000, 40%),
+  primary-dark: darken(#ff0000, 40%),
+  secondary: #000000,
   accent: #f0ead6
 );
 
 $padding: 15px;
 $borders: 15px;
 $desktop: 840px;
+$tablet: 768px;
+$phone: 640px;
 $container: 960px;
 $section-padding: 20px;
 $main-font: "Helvetica";
