--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,6 @@
 body {
   background-color: #f0ead6;
   text-align: center;
-  color: #36558f;
+  color: #ff0000;
 }
 /*# sourceMappingURL=main.css.map */
