--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,26 +21,29 @@ html {
 }
 
 body {
-  #bg {
-    clip-path: polygon(100% 0, 99% 80%, 40% 100%, 0 100%, 0 0);
-    /*background-color: map-get($colors, primary);*/
-    background-color: color(primary);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-
-    @include desktop {
-      clip-path: polygon(0 0, 76% 0, 48% 100%, 0% 100%);
-    }
-  }
-
-  header a {
-    color: #fff;
+  .header {
     text-decoration: none;
     padding: $padding;
     display: block;
     text-transform: uppercase;
+    height: 300px;
+    h1 {
+      font-size: 50px;
+      line-height: 1.3;
+      position: relative;
+      animation: heading;
+      animation-duration: 3s;
+      animation-fill-mode: forwards;
+    }
+  }
+}
+
+@keyframes heading {
+  0% {
+    top: -50px;
+  }
+  100% {
+    top: 200px;
   }
 }
 
@@ -133,52 +136,14 @@ main {
   }
 }
 
-body {
-  background: $body-bg;
-  font-family: $main-font;
-  text-align: center;
-}
-
 a {
   text-decoration: none;
-  color: #333;
 }
 
 .container {
   max-width: $container;
   margin: auto;
   padding: 0 20px;
-}
-
-header#main-header {
-  padding: 1em;
-  background: $primary-color;
-  color: set-text-color($primary-color);
-
-  h1 {
-    font-size: 40px;
-  }
-}
-
-nav#main-nav {
-  background: $secondary-color;
-  height: 40px;
-
-  ul {
-    list-style: none;
-  }
-
-  li {
-    display: inline;
-  }
-
-  a {
-    color: #fff;
-    padding-right: 20px;
-    &:hover {
-      color: #ccc;
-    }
-  }
 }
 
 .section {
@@ -203,14 +168,15 @@ nav#main-nav {
 
 #login_button {
   padding: 10px 15px;
-  background: color(primary-dark);
+  background: color(primary-light);
   color: color(accent);
   transition-property: background, border-radius;
   transition-duration: 1s;
-}
 
-#login_button:hover {
-  border-radius: 25%;
+  #login_button:hover {
+    background-color: color(primary-dark);
+    border-radius: 25%;
+  }
 }
 
 @-webkit-keyframes mymove {
