--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,5 +7,202 @@ body {
   background-color: #f0ead6;
   text-align: center;
   color: #ff0000;
+  font-family: "Montserrat";
+  margin: 0;
+}
+
+body,
+html {
+  height: 100%;
+}
+
+body .header {
+  text-decoration: none;
+  padding: 15px;
+  display: block;
+  text-transform: uppercase;
+  height: 300px;
+}
+
+body .header h1 {
+  font-size: 50px;
+  line-height: 1.3;
+  position: relative;
+  -webkit-animation: heading;
+          animation: heading;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes heading {
+  0% {
+    top: -50px;
+  }
+  100% {
+    top: 200px;
+  }
+}
+
+@keyframes heading {
+  0% {
+    top: -50px;
+  }
+  100% {
+    top: 200px;
+  }
+}
+
+main section#card {
+  background: #ffffff;
+  padding: 20px;
+  margin: 1em auto;
+  border-radius: 15px;
+  -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  width: 80%;
+}
+
+@media (min-width: 840px) {
+  main section#card {
+    grid-area: card;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin: 1em;
+  }
+}
+
+main section#card ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+main section#card ul li {
+  margin-bottom: 10px;
+}
+
+main section#card ul li span {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: #ffcccc;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+main section#card ul li strong {
+  display: inlines-block;
+  margin-left: 40px;
+  margin-top: 10px;
+}
+
+main section#primary {
+  color: #fff;
+  padding: 15px;
+  text-align: center;
+}
+
+@media (min-width: 840px) {
+  main section#primary {
+    grid-area: primary;
+    text-align: left;
+    margin: 4em 0 0 4em;
+  }
+}
+
+main section#primary h1 {
+  font-size: 3em;
+  margin-top: 10px;
+  text-transform: uppercase;
+}
+
+@media (min-width: 840px) {
+  main section#primary h1 {
+    width: 30%;
+    font-size: 4em;
+    line-height: 0.9em;
+  }
+}
+
+main section#primary p {
+  font-size: 1.4em;
+}
+
+main section#primary a {
+  color: #330000;
+  border-radius: 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: #f0ead6;
+  display: block;
+  text-align: center;
+  margin: 50px auto 0 auto;
+  padding: 15px;
+}
+
+@media (min-width: 840px) {
+  main section#primary a {
+    display: inline-block;
+    padding: 15px 60px;
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 960px;
+  margin: auto;
+  padding: 0 20px;
+}
+
+.section {
+  padding: 20px;
+}
+
+.section h1 {
+  margin-bottom: 30px;
+}
+
+#login_button {
+  padding: 10px 15px;
+  background: #ffcccc;
+  color: #f0ead6;
+  -webkit-transition-property: background, border-radius;
+  transition-property: background, border-radius;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+}
+
+#login_button #login_button:hover {
+  background-color: #330000;
+  border-radius: 25%;
+}
+
+@-webkit-keyframes mymove {
+  from {
+    top: 0px;
+  }
+  to {
+    top: 200px;
+  }
+}
+
+/* Standard syntax */
+@keyframes mymove {
+  from {
+    top: 0px;
+  }
+  to {
+    top: 200px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
