--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -156,7 +156,7 @@ a {
 
 #login_button {
   padding: 10px 15px;
-  background: color(primary-light);
+  background: color(secondary);
   color: color(accent);
   transition-property: background, border-radius;
   transition-duration: 1s;
