--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@ body {
   background-color: color(accent);
   text-align: center;
   color: color(primary);
-  font-family: "Montserrat";
+  font-family: $main-font;
   margin: 0;
 }
 
